# quark

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
quark-generate/: Cargo.toml
quark-generate/src/: cargo.rs  lib.rs
quark-storage/: Cargo.toml
quark-structure/: Cargo.toml
src/: main.rs
