[package]
name = "quark-generate"
version = "0.1.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
indoc = "1.0"
tracing = "0.1"
codegen = "0.1.3"
libloading = "0.7.0"
tokio = { version = "1", features = ["full"] }

quark-structure = { version = "*", path = "../quark-structure" }

[dev-dependencies]
tracing-subscriber = "0.2"