[package]
name = "quark-storage"
version = "0.1.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = "0.6.4"
anyhow = "1"
bytes = "1"

quark-structure = { version = "*", path = "../quark-structure" }